--- a/admin/package.json
+++ b/admin/package.json
@@ -3,13 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
@@ -20,18 +13,25 @@
     "@mui/material": "^5.13.5",
     "@mui/x-data-grid": "^6.8.0",
     "@reduxjs/toolkit": "^1.9.5",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "javascript-time-ago": "^2.5.9",
+    "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
+    "react-dom": "^18.2.0",
     "react-redux": "^8.1.0",
     "react-router-dom": "^6.13.0",
+    "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
     "react-time-ago": "^7.2.1",
     "react-uuid": "^2.0.0",
     "recharts": "^2.7.1",
     "redux-persist": "^6.0.0",
     "sass": "^1.63.4",
-    "timeago.js": "^4.0.2"
+    "timeago.js": "^4.0.2",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -56,5 +56,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
