--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,7 @@
 {
   "name": "client",
   "version": "0.1.0",
+  "proxy": "http://localhost:3000",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -9,6 +10,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@fvilers/disable-react-devtools": "^1.3.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.5",
     "@react-google-maps/api": "^2.18.1",
@@ -24,6 +26,7 @@
     "firebase": "^9.22.2",
     "formik": "^2.4.2",
     "javascript-time-ago": "^2.5.9",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-burger-menu": "^3.0.9",
     "react-datepicker": "^4.13.0",
@@ -43,12 +46,13 @@
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.0.0",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
   },
   "scripts": {
     "start": "env-cmd -f .env.dev react-scripts start",
-    "build": "react-scripts build",
+    "build": "env-cmd -f .env.dev react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -69,5 +73,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "react-router-dom": "^6.13.0"
   }
 }
